<resources>
    <string name="app_name">Bismuth Toolbox</string>

    <!-- Top toolbar -->
    <string name="action_settings">Settings</string>
    <string name="action_licence">License</string>
    <string name="action_about">About</string>

    <!-- Home screen -->
    <string name="tv_mining">Mining</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>
    <string name="lagging">Lagging</string>
    <string name="na">N/A</string>
    <string name="tv_hypernodes">Hypernodes</string>
    <string name="tv_wallet">My $BIS wallets</string>
    <string name="tv_network">$BIS network</string>
    <string name="hashrate">Hashrate, MH/s</string>
    <string name="wallets_number">Registered wallets</string>
    <string name="bis_balance">Balance, BIS</string>
    <string name="usd_balance">Balance, USD</string>
    <string name="block_height">POS block height</string>
    <string name="bis_to_btc">BIS/&#181;BTC price</string>
    <string name="bis_to_usd">BIS/USD price</string>
    <string name="loading_data">Loading data…</string>

    <!-- Mining screen -->
    <string name="hashrate_average_tv">%1$s (average)</string>
    <string name="hashrate_current_tv">%1$s (current)</string>
    <string name="shares_average_tv">%1$s (average)</string>
    <string name="shares_current_tv">%1$s (current)</string>
    <string name="miners_active_tv">%1$s (active)</string>
    <string name="miners_inactive_tv">%1$s (inactive)</string>
    <string name="miner_last_seen_rv">%1$s min ago</string>

    <!-- Hypernodes screen -->
    <string name="my_active_hns_tv">%1$s (active)</string>
    <string name="my_inactive_hns_tv">%1$s (inactive)</string>
    <string name="last_week_hn_pay_tv">%1$s $BIS</string>
    <string name="my_hns_total_collateral_tv">%1$s $BIS</string>
    <string name="my_hns_collateral_address_rv_tv">Collateral address: %1$s</string>
    <string name="my_hns_reward_address_rv_tv">Reward address: %1$s</string>
    <string name="my_hns_tier_rv_tv">Hypernode tier: %1$s</string>
    <string name="my_hns_version_rv_tv">Hypernode version: %1$s</string>

    <!-- Navigation drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Bismuth Toolbox</string>
    <string name="nav_header_subtitle">https://bismuth.cz</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="menu_hypernodes">Hypernodes</string>
    <string name="menu_mining">Mining</string>
    <string name="menu_wallet">Wallet</string>
    <string name="menu_network">Network</string>
    <string name="menu_settings">Settings</string>

    <!-- Bottom navigation views for all activities -->
    <string name="title_my_hypernodes">My hypernodes</string>
    <string name="title_pos_network">POS network</string>
    <string name="title_miners">Miners</string>
    <string name="title_payouts">Payouts</string>

    <!-- messages -->

    <!-- settings screen -->
    <string name="data_share_consent">If you enable push notifications, some of your data entered on this settings screen (i.e. hypernode IPs and wallets addresses)
        together with your device unique ID will be sent to the Google Firebase. This data is submitted anonymously and will be used by the author ONLY for the purpose
        of serving you with targeted push notifications about any problems with your hypernodes and miners. If you accept it, please click "accept" button. If you do not accept
        it, please click "decline" button (note: you will not receive any push notifications, although you can change your mind latter).
    </string>

    <!-- License -->
    <string name="app_license">
       MIT License

        Copyright © 2020 DoNutsLise

        Permission is hereby granted, free of charge, to any person obtaining a copy
        of this software and associated documentation files (the "Software"), to deal
        in the Software without restriction, including without limitation the rights
        to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
        copies of the Software, and to permit persons to whom the Software is
        furnished to do so, subject to the following conditions:

        The above copyright notice and this permission notice shall be included in all
        copies or substantial portions of the Software.

        THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
        IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
        FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
        AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
        LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
        OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
        SOFTWARE.
    </string>
</resources>
