<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/Lavender"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_hypernodes"
            android:icon="@drawable/ic_menu_hypernodes"
            android:title="@string/menu_hypernodes" />
        <item
            android:id="@+id/nav_mining"
            android:icon="@drawable/ic_menu_mining"
            android:title="@string/menu_mining" />
        <item
            android:id="@+id/nav_wallet"
            android:icon="@drawable/ic_menu_wallet"
            android:title="@string/menu_wallet" />
        <item
            android:id="@+id/nav_network"
            android:icon="@drawable/ic_menu_network"
            android:title="@string/menu_network" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings" />
    </group>

</menu>
